--- a/package.json
+++ b/package.json
@@ -6,9 +6,47 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "@auth0/auth0-react": "^1.0.0",
+    "@auth0/auth0-spa-js": "^1.10.0",
+    "@babel/polyfill": "7.4.3",
+    "axios": "^0.19.2",
+    "compression": "1.7.4",
+    "connected-react-router": "6.4.0",
+    "cross-env": "5.2.0",
+    "d3": "^5.16.0",
+    "fontfaceobserver": "2.1.0",
+    "history": "4.9.0",
+    "hoist-non-react-statics": "3.3.0",
+    "immer": "3.0.0",
+    "intl": "1.2.5",
+    "invariant": "2.2.4",
+    "leaflet": "^1.6.0",
+    "leaflet-draw": "^1.0.4",
+    "lodash": "4.17.11",
+    "match-sorter": "^4.1.0",
+    "node-restful": "^0.2.6",
+    "prop-types": "15.7.2",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-dropdown": "^1.7.0",
+    "react-geosuggest": "^2.13.1",
+    "react-helmet": "6.0.0-beta",
+    "react-intl": "2.8.0",
+    "react-leaflet": "^2.7.0",
+    "react-leaflet-draw": "^0.19.0",
+    "react-number-format": "^4.4.1",
+    "react-redux": "7.0.2",
+    "react-router-dom": "5.0.0",
+    "react-table": "^7.2.1",
+    "redux": "4.0.1",
+    "redux-saga": "1.0.2",
+    "reselect": "4.0.0",
+    "sanitize.css": "8.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2",
+    "session-file-store": "^1.4.0",
+    "shortid": "^2.2.15",
+    "styled-components": "4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +68,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "react-testing-library": "6.1.2",
+    "eslint-plugin-redux-saga": "1.0.0"
   }
 }
