--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "beer-local-cra",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.6.x",
+    "npm": "6.14.x"
+  },
   "dependencies": {
     "@auth0/auth0-react": "^1.0.0",
     "@auth0/auth0-spa-js": "^1.10.0",
