--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@auth0/auth0-react": "^1.0.0",
     "@auth0/auth0-spa-js": "^1.10.0",
     "@babel/polyfill": "7.4.3",
+    "@react-pdf/renderer": "^2.0.0-beta.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -18,21 +19,26 @@
     "connected-react-router": "6.4.0",
     "cross-env": "5.2.0",
     "d3": "^5.16.0",
+    "draft-js": "^0.11.6",
+    "draft-js-export-html": "^1.4.1",
     "fontfaceobserver": "2.1.0",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
     "immer": "3.0.0",
     "intl": "1.2.5",
     "invariant": "2.2.4",
+    "javascript-time-ago": "^2.0.8",
     "leaflet": "^1.6.0",
     "leaflet-draw": "^1.0.4",
     "lodash": "^4.17.11",
     "match-sorter": "^4.1.0",
+    "moment": "^2.27.0",
     "node-restful": "^0.2.6",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "16.13.1",
-    "react-dropdown": "^1.7.0",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-geosuggest": "^2.13.1",
     "react-helmet": "6.0.0-beta",
     "react-intl": "2.8.0",
