--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@auth0/auth0-react": "^1.0.0",
     "@auth0/auth0-spa-js": "^1.10.0",
     "@babel/polyfill": "7.4.3",
+    "@mapbox/geojson-rewind": "^0.5.0",
     "@react-pdf/renderer": "^2.0.0-beta.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -36,6 +37,7 @@
     "node-restful": "^0.2.6",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
+    "react-avatar-editor": "^11.0.9",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "16.13.1",
     "react-draft-wysiwyg": "^1.14.5",
@@ -49,6 +51,7 @@
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
+    "react-semantic-ui-range": "^0.7.0",
     "react-table": "^7.2.1",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
