--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "awesome-phonenumber": "^2.35.0",
     "axios": "^0.19.2",
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
