--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^7.2.1",
     "awesome-phonenumber": "^2.35.0",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
     "cross-env": "5.2.0",
@@ -40,6 +41,7 @@
     "react": "16.13.1",
     "react-avatar-editor": "^11.0.9",
     "react-beautiful-dnd": "^13.0.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "16.13.1",
     "react-draft-wysiwyg": "^1.14.5",
     "react-geosuggest": "^2.13.1",
