--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-intl": "2.8.0",
     "react-leaflet": "^2.7.0",
     "react-leaflet-draw": "^0.19.0",
+    "react-masonry-css": "^1.0.14",
     "react-number-format": "^4.4.1",
     "react-redux": "7.0.2",
     "react-router-dom": "5.1.2",
