Update package.json homepage URL

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beer-local-client",
-  "homepage": "https://compassionate-brahmagupta-3eab31.netlify.app/",
+  "homepage": "https://beerlocal.co.uk/",
   "version": "0.1.0",
   "private": true,
   "engines": {
